@@ -60,7 +60,7 @@ G_REAL factorial (G_REAL n)
 	else return 1;
 }
 
-#if HAVE_LIBQUADMATH
+#if USE_LIBQUADMATH
 
 /* Compute complement (negation) of argument. See greal2hugeint for more information. */
 G_REAL cmp (G_REAL n)
@@ -92,14 +92,14 @@ G_REAL cmp (G_REAL n)
 	return n;
 }
 
-#else // HAVE_LIBQUADMATH
+#else // USE_LIBQUADMATH
 
 G_REAL cmp (G_REAL n)
 {
 	return (G_REAL)(~((G_HUGEINT)n));
 }
 
-#endif  // HAVE_LIBQUADMATH
+#endif  // USE_LIBQUADMATH
 
 /*
  * angle base conversions
